<resources>
  <string name="app_name">TAS_PAM</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">coder@fti.uksw.edu</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="login_title">Cafe Local</string>
  <string name="uname">Username</string>
  <string name="pass">Password</string>
  <string name="login_btn">Login</string>

  <string name="menu_home">Temukan Cafe-mu</string>
  <string name="menu_gallery">Petanya dora</string>
  <string name="menu_slideshow">Listing data</string>

  <string name="home_fragment_text">Please locate yourself on google map with pressing bottom right button</string>
  <string name="home_second">Home Second</string>
  <string name="title_activity_maps_of_cafe">Emg da duit</string>
  <string name="open_map_activity">Please wait app is trying to get precise location</string>
  <string name="unintended_map_activity_end">unexpected google place api result</string>
</resources>
