<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="127dp"
        android:layout_marginStart="20dp"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login_title"/>

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uname"
        android:textSize="15dp"
        android:fontFamily="@font/roboto_regular"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="225dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="277dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="382dp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/login_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>