<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
  <fragment
      android:id="@+id/nav_home"
      android:name="com.example.tas_pam.ui.home.HomeFragment"
      android:label="@string/menu_home"
      tools:layout="@layout/fragment_home">

    <action
        android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
        app:destination="@id/nav_home_second" />
  </fragment>


  <fragment
      android:id="@+id/nav_home_second"
      android:name="com.example.tas_pam.ui.home.HomeSecondFragment"
      android:label="@string/home_second"
      tools:layout="@layout/fragment_home_second">
    <action
        android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
        app:destination="@id/nav_home" />

    <argument
        android:name="myArg"
        app:argType="string" />
    <action
        android:id="@+id/action_nav_home_second_to_nav_slideshow"
        app:destination="@id/nav_slideshow"
        app:launchSingleTop="false" />
  </fragment>

  <fragment
      android:id="@+id/nav_gallery"
      android:name="com.example.tas_pam.ui.gallery.GalleryFragment"
      android:label="@string/menu_gallery"
      tools:layout="@layout/fragment_gallery" />

  <fragment
      android:id="@+id/nav_slideshow"
      android:name="com.example.tas_pam.CafeFragment"
      android:label="@string/menu_slideshow"
      tools:layout="@layout/fragment_cafe_list" />
  <action
    android:id="@+id/activate_cafe_listing"
    app:destination="@id/nav_slideshow">
<!--    <argument-->
<!--      android:name="a"-->
<!--      app:argType="reference"-->
<!--      android:defaultValue="" />-->
  </action>
  <activity
      android:id="@+id/mapsOfCafe"
      android:name="com.example.tas_pam.MapsOfCafe"
      android:label="activity_maps_of_cafe"
      tools:layout="@layout/activity_maps_of_cafe" />
</navigation>