<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar_logo"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/CardView.Dark">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="94dp"
      android:layout_height="89dp"
      android:contentDescription="@string/nav_header_desc"
      android:paddingTop="@dimen/nav_header_vertical_spacing"
      tool:srcCompat="@tools:sample/avatars[7]" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/nav_header_vertical_spacing"
      android:text="@string/nav_header_title"
      android:textColor="@android:color/white"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:text="@string/nav_header_subtitle" />

</LinearLayout>
